# chess-game

./: CMakeLists.txt  README.md
apps/: chess.cpp
include/chess/: board.hpp  game-level.hpp  game.hpp  piece.hpp
resources/shaders/: particle.fs  particle.vs  postprocessor.fs  postprocessor.vs  sprite.vs  text.fs
resources/textures/: possible.png~  selected.png~
src/: CMakeLists.txt  board.cpp  game-level.cpp  game.cpp  piece.cpp
